--- a/index.html
+++ b/index.html
@@ -14,30 +14,24 @@
         </div>
         
         <div class="navigation">
-            <p class="para">Time</li>
-            <p class="para" id="timer">0 s</li>
-           </div>
-           <div class="right">
-        <select id="level" >
-            <option>3*3</option>
-            <option>4*4</option>
-            <option>5*5</option>
-            <option>6*6</option>
-          </select>
+            <p class="para">Time :</li>
+            <p class="para" id="timer"> 0 s</li>
+        </div>
+        <div class="right">
+            <select id="level" >
+                <option>3*3</option>
+                <option>4*4</option>
+                <option>5*5</option>
+                <option>6*6</option>
+            </select>
         </div>
     </div>
-    <canvas id="glCanvas1" width="350" height="220" onclick="lol('glCanvas1')"></canvas>
-    <canvas id="glCanvas2" width="350" height="220" onclick="lol('glCanvas2')"></canvas>
-    <canvas id="glCanvas3" width="350" height="220" onclick="lol('glCanvas3')"></canvas>
-    <canvas id="glCanvas4" width="350" height="220" onclick="lol('glCanvas4')"></canvas>
-    <canvas id="glCanvas5" width="350" height="220" onclick="lol('glCanvas5')"></canvas>
-    <canvas id="glCanvas6" width="350" height="220" onclick="lol('glCanvas6')"></canvas>
-    <canvas id="glCanvas7" width="350" height="220" onclick="lol('glCanvas7')"></canvas>
-    <canvas id="glCanvas8" width="350" height="220" onclick="lol('glCanvas8')"></canvas>
-    <canvas id="glCanvas9" width="350" height="220" onclick="lol('glCanvas9')"></canvas>
-    <canvas id="glCanvas10" width="350" height="220" onclick="lol('glCanvas10')"></canvas>
-    <canvas id="glCanvas11" width="350" height="220" onclick="lol('glCanvas11')"></canvas>
-    <canvas id="glCanvas12" width="350" height="220" onclick="lol('glCanvas12')"></canvas>
+    <canvas id="glCanvas1" width="500" height="290" onclick="lol('glCanvas1')"></canvas>
+    <canvas id="glCanvas2" width="500" height="290" onclick="lol('glCanvas2')"></canvas>
+    <canvas id="glCanvas3" width="500" height="290" onclick="lol('glCanvas3')"></canvas>
+    <canvas id="glCanvas4" width="500" height="290" onclick="lol('glCanvas4')"></canvas>
+    <canvas id="glCanvas5" width="500" height="290" onclick="lol('glCanvas5')"></canvas>
+    <canvas id="glCanvas6" width="500" height="290" onclick="lol('glCanvas6')"></canvas>
     <script src="gl-matrix.js"></script>
     <script src="triangle.js"></script>
 
